# todo

./: .gitignore  README.md  pyproject.toml
resources/: resources.qrc
resources/icons/app/: Todo.icns
resources/qml/: Todo.qml  TodoItem.qml  TodoList.qml  TodoModel.qml  TodoToolBar.qml
scripts/: compile.py  freeze.py
todo/: __main__.py
