[tool.poetry]
name = "todo"
version = "0.1.0"
description = "Todo list app built with Qt."
authors = ["Kevin Feng"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
PyQt6 = "^6.3.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
